# pcbflow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRANDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_WORKFLOW.md  LICENSE  README.md  ROADMAP.md  VALIDATION.md  install-guidance.md  pyproject.toml
agents/: README.md
automation/: README.md
docs/: 00_PHILOSOPHY.md  01_METHODOLOGY.md  02_ARCHITECTURE.md  03_KNOWLEDGE_GRAPH.md  04_HUMAN_IN_THE_LOOP.md  05_BOTTLENECKS.md  06_EASYEDA_INTEGRATION.md  07_BROWSER_AUTOMATION.md  08_PROMPT_AND_AGENT_STRATEGY.md  09_VALIDATION.md  10_MEMORY_AND_STATE.md  11_REUSABLE_SYSTEMS.md  12_DESIGN_PATTERNS.md  13_LESSONS_LEARNED.md  14_CONTRIBUTING.md  15_ROADMAP.md  16_VERSION_2.md  CONFIG.md  DOC_GAP_ANALYSIS.md  HW_GAP_ANALYSIS.md  HW_IMPLEMENTATION_PLAN.md  README.md
handbook/: 01-introduction.md  02-installing-tools.md  03-vscode-and-ai.md  10-manufacturing.md  README.md  glossary.md  windows-setup.md
knowledge/: README.md  knowledge-inheritance.md  principles.md
pcbflow/: README.md  cli.py  dfm.py  erc.py  erc_pins.py  findings.py  gates.py  hw.py  import_diff.py  ipc.py  kicad_sexp.py  parts.py  power_tree.py  ratings.py  routing_check.py  routing_rules.py  stackup.py
reliability/: DEPENDENCY_VALIDATION.md  README.md  ROADMAP.md  SELF_HEALING.md  TROUBLESHOOTING.md  VULNERABILITY_REPORT.md
templates/: build_sheet.template.md  design_rules.template.json  net_connection.template.md  placement.template.json  route_sequence.template.json  section_generator.template.js  trace_width_table.template.json
tests/: test_claims.py  test_dfm.py  test_erc.py  test_findings.py  test_gates.py  test_hw.py  test_import_diff.py  test_kicad_sexp.py  test_routing_check.py  test_routing_rules.py  test_stackup.py
tools/: README.md  axon_log.py  check_claims.py  diagnose.py  doctor.py  drc.py  heal.py  launch_easyeda.py  pcbflow_log.py  platform_utils.py  recover.py  (+7 more)
(+23 files in other folders)
